syntax = "proto3";
package forge.v1;

import "types/v1/build.proto";
import "types/v1/forge.proto";

service ForgeService {
  rpc Search(SearchRequest) returns (SearchResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);

  rpc ListBuilds(ListBuildsRequest) returns (ListBuildsResponse);
}

message SearchRequest {
  string query = 1;
}

message SearchResponse {
  repeated types.v1.Forge result = 1;
}

message UpdateRequest {}

message UpdateResponse {
  string message = 1;
}

message ListBuildsRequest {
  string forge = 1;
  string query = 2;
}

message ListBuildsResponse {
  repeated types.v1.Build builds = 1;
}
